# ResearchMathAgent

./: .claudeignore  .gitignore  CLAUDE.md  README.md  README_zh.md  TODO.md  background.tex  checklist.tex  data  deploy.sh  gemni_solution.tex  main.tex  outputs  plan.md  plan.tex  problems  proxy_server.py  pyproject.toml  references.bib  rma_ara_agentic_ai_proposal.tex  run_daily.sh  run_fp2_init.py  run_pf_standalone.py  run_push_forward.sh  setup_server.sh  start_all.sh  start_dev.sh  start_dev_tunnel.sh  start_filter_dev.sh  start_filter_server.sh  start_ngrok.sh  start_proxy_dev.sh  start_proxy_server.sh  start_server.sh  start_solve_dev.sh  start_solve_server.sh  true_answer.tex
data/batch-2/batch-2-submissions/improofbench/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  hardware.json  pyproject.toml
data/batch-2/batch-2-submissions/improofbench/app/: app.py  dev.py  dev_data.py
data/batch-2/batch-2-submissions/improofbench/deploy/: Dockerfile  README.md  hardware.json
data/batch-2/batch-2-submissions/improofbench/evals/: README.md
data/batch-2/batch-2-submissions/improofbench/problems/: brokenarxiv_sample.txt  example.txt  hilbert_admissible_v1.tex  research_plan_abvar_pilot.tex  stable_graphs_M_e.tex  stable_graphs_compute_smoke.tex
data/batch-2/batch-2-submissions/improofbench/scripts/: _env.py  firstproof_entrypoint.py  firstproof_healthcheck.py  prescreen_problem.py  proofstack_smoke.py  run_evals.py  run_workflow.py  run_workflow_batch.py  smoke_author_pro_container.py  smoke_firstproof_adapter.py  wiring_check_container_files.py  wiring_check_pro_pdf.py
data/batch-2/batch-2-submissions/improofbench/smoke/: README.md  input.json  run_container.sh  run_local.sh  secrets.env.example
data/batch-2/batch-2-submissions/improofbench/test_run_problems/: README.md
data/batch-2/batch-2-submissions/improofbench/tests/: test_ac_author_container_cleanup.py  test_ac_compute_parsing.py  test_ac_compute_worker.py  test_ac_council_defaults.py  test_ac_latex_contract.py  test_ac_resume.py  test_api_client_anthropic_streaming.py  test_api_client_reasoning_tokens.py  test_api_client_responses_tools.py  test_configurable_cli.py  test_configurable_prompt_outputs.py  test_dag_schema_report.py  test_dag_workflow_runtime_helpers.py  test_dev_data_mutations.py  test_editor_template_contracts.py  test_firstproof_healthcheck.py  test_firstproof_latex_sanitizer.py  test_parallel_solve_verify_improve.py  test_prompt_overhaul_contracts.py  test_pwc_components.py  test_registry_inputs.py  test_run_discovery.py  test_run_execution_graph.py  test_workflow_graph_edges.py
data/batch-2/batch-2-submissions/princeton/: .dockerignore  Dockerfile  README.md  hardware.json  pyproject.toml
data/batch-2/batch-2-submissions/princeton/docs/: MomusHowTo.md  firstproof_build_audit_2026-05-28.md  firstproof_may29_todos.md  firstproof_submission.md  pipeline_invariants.md  skills_literature_injection.md  skills_prompt_optimization.md  (+1 more)
problems/: q1.tex  (+5 more)
(+2197 files in other folders)
