[build-system]
requires = ["setuptools>=63"]
build-backend = "setuptools.build_meta"

[project]
name = "research-math-agent"
version = "0.1.0"
description = "Research Math Agent CLI and proof artifact tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["certifi>=2024.2.2"]

[project.scripts]
rma = "rma.cli:main"

[tool.setuptools.packages.find]
include = ["rma*"]
