[build-system]
requires = ["setuptools>=63"]
build-backend = "setuptools.build_meta"

[project]
name = "research-math-agent"
version = "0.1.0"
description = "Research Math Agent CLI and proof artifact tooling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["certifi>=2024.2.2"]

[project.optional-dependencies]
# Live agent web app (webapp/): Claude-powered solver with a step-by-step UI.
webapp = [
    "anthropic[vertex]>=0.40",
    "google-auth>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
rma = "rma.cli:main"

[tool.setuptools.packages.find]
include = ["rma*", "webapp*", "webapp_filter*"]
