[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "math_solver"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "httpx>=0.27",
    "anyio>=4.4",
    "aiofiles>=23",
    "rich>=13",
    "click>=8",
    "pydantic>=2",
    "feedparser>=6",          # arxiv Atom feed parsing
]

[project.optional-dependencies]
tavily = ["tavily-python>=0.3"]

[project.scripts]
math-solver = "math_solver.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
